# Full_stacks_ai_course

./: .gitignore  LICENSE  README.md
modules/final_project/home_credit_score_project/home-credit-default-risk/: EDA.ipynb
modules/machine_and_deep_learning/: requirements.txt  unet_segmentation.ipynb
slides/AI_in_industry/: README.md
slides/ai_fundamentals/: README.md
slides/machine_and_deep_learning/: README.md
tools/data_science_toolkit/: Setting-Up-SSH-and-GitHub-with-VS-Code.md  pip_freeze_vs_pipreqs_comparison.md  poetry_vscode_setup.md
tools/data_science_toolkit/mlflow_intro/mlflow_quickstart/: mlflow_quickstart.md  pyproject.toml
tools/data_science_toolkit/mlflow_intro/mlflow_quickstart/src/mlflow_quickstart/: load_and_predict.py  train_and_register.py
tools/data_science_toolkit/prometheus-grafana-ml/: README.md  prometheus.yml  requirements.txt  run_pipeline.sh
tools/data_science_toolkit/prometheus-grafana-ml/app/: app.py
tools/data_science_toolkit/prometheus-grafana-ml/grafana/: run_grafana.sh
tools/data_science_toolkit/prometheus-grafana-ml/monitoring/: prometheus.yml  run_prometheus.sh
tools/data_science_toolkit/prometheus-grafana-ml/prometheus/: run_prometheus.sh
tools/git_intro/: Git_cheat_sheet.md  README.md  understand_gitignore_file.md
